1998-09-24  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Change crerepos test back to :ext: (for several
	reasons; see comments).

1998-09-24  Noel Cragg  <noel@swish.red-bean.com>

	* sanity.sh (rcslib-symlink-5, rcslib-symlink-6): new tests to
	check the operation of "tag" when there are symlinks in the
	repository.

	* rcs.c (RCS_checkin): remove old code that resolved the symlink
	and call resolve_symlink instead.
	(RCS_rewrite): call resolve_symlink before doing anything else to
	make sure we're operating on the file and not the symlink.

	* subr.c (resolve_symlink): new routine -- resolves a symbolic
	link chain to its destination.
	* cvs.h: add prototype.

	* sanity.sh (basica-6.2, basica-6.3): changed match expressions to
	reflect new diff output.

	* rcs.c (make_file_label): generate labels for files that include
	the pathname so that output from "cvs diff" is useable by patch.
	Looks like I came up with the mods as Andy Piper
	<andyp@parallax.co.uk>; his patch was on the Cyclic unofficial
	patches page.

	* sanity.sh: change remote access method from ext to fork.  This
	results in a significant speed improvement when running the
	testsuite.  The ext method on my machine (i586 120MHz Linux 2.0.35
	with TCP wrappers installed) runs in 450% of the time of the local
	method while the fork method runs in only 150% of the time of the
	local method!  Yow!  Am I SWAPPING yet?!
	(crerepos-6a, crerepos-6b): change to reflect different error
	messages for fork method.
	(modes-15): same.

	* client.c (connect_to_forked_server): new routine.
	(start_server): call the above when method is fork_method.

	* root.c: add a new method named "fork".  This method uses the
	remote protocol, but does so by forking a "cvs server" process
	directly rather than doing "rsh host cvs server" (for example).
	This new method has few advantages for day-to-day use, but has
	three important benefits for debugging:
